<b><u> v1.32, xx.xx.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Added BenikUI's option to change castbar text color (classcolor)

<b><u> v1.31, 08.04.2016</b></u>
<font color=#FF8C00>&#9830;</font> UnitFrames: Add a new Tag [num:targeting] it will display a number which indicates how many people in your group is targeting the unit. (Credits Blazeflack - ElvUI_CustomTags)
<font color=#FF8C00>&#9830;</font> Reminder: Fixed a nil Error in the Reminder Options.

<b><u> v1.30, 29.03.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Move the settings from AddOnSkins to my Install. So it will not to be forced.

<b><u> v1.29, 28.03.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Move the settings from the Datatexts where it belongs.
<font color=#FF8C00>&#9830;</font> Skins: Change a few MasterPlan Fonts. Thx Darth Predator. (Requires AddOnSkins)

<b><u> v1.28, 23.03.2016</b></u>
<font color=#FF8C00>&#9830;</font> UnitFrames: Fixed the greyed out Option in Unitframes.

<b><u> v1.27, 23.03.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: enable the BenikUI Token Dashboard again.
<font color=#FF8C00>&#9830;</font> Battle.net Alert fix a rar Error. (Credits: cmc3215)

<b><u> v1.26, 23.03.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Delete the xCT+ Profile.
<font color=#FF8C00>&#9830;</font> Install: Use default for colorOverride in PartyFrames.
<font color=#FF8C00>&#9830;</font> Install: Adjust Actionbars due to recent changes in ElvUI.
<font color=#FF8C00>&#9830;</font> Adjust the new BenikUI Flight Mode to fit my UI.
<font color=#FF8C00>&#9830;</font> Rearrange the Skin Options.
<font color=#FF8C00>&#9830;</font> Battle.net API Changes.
<font color=#FF8C00>&#9830;</font> Clean Up & Caching.

<b><u> v1.25, 10.03.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Adjust settings for RoleIcons.
<font color=#FF8C00>&#9830;</font> Install: Return of the BenikUI PowerBar Status Texture.